--- a/media/css/products/vpn/common-refresh.scss
+++ b/media/css/products/vpn/common-refresh.scss
@@ -107,7 +107,7 @@ main {
 
 .c-guarantee {
     @include text-body-sm;
-    color: $color-green-70;
+    color: $color-moz-dark-green;
     font-weight: bold;
     margin: 0 auto;
     text-align: center;
